[package]
name = "lmfitrs"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19.0"
ndarray = { version="0.15.6", features = ["rayon"] }
ndarray-ndimage = "0.4.0"
num-complex = "0.4.4"
rustfft = "6.1.0"
ndrustfft = "0.4.2"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
maturin = "1.3.0"
rayon = "1.8.0"
levenberg-marquardt = "0.13"
nalgebra = "0.32.3"
whittaker_smoother = "0.1"
savgol-rs = "0.1"
median = "0.3.2"
